# penhas-backend

./: .gitignore  100_PERCENT_COMPLETE.md  ALL_TASKS_COMPLETE.md  AMBIENTE_DESENVOLVIMENTO.md  COMPLETE_MIGRATION_REPORT.md  COMPLETION_80PCT.md  ENDPOINTS_INVENTORY.md  FINAL_COMPLETION.md  FINAL_STATUS.md  MIGRATION_PLANS.md  MIGRATION_PROGRESS.md  SESSION_SUMMARY.md  docker-compose.dev.yaml
backend_python/: DEPLOYMENT.md  Dockerfile  MIGRATION_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend_python/alembic/: README.md  env.py
backend_python/app/: main.py  utils.py  worker.py
backend_python/app/api/: api.py  deps.py
backend_python/app/core/: celery_app.py  config.py  crypto.py  jwt_auth.py  redis_client.py  security.py
backend_python/app/db/: base_class.py  session.py
backend_python/app/helpers/: __init__.py  admin.py  anon_quiz.py  audio.py  badges.py  chat.py  chat_support.py  cliente.py  guardioes.py  notifications.py  timeline.py
backend_python/app/integrations/: cep.py  cpf.py  email.py  fcm.py  geolocation.py  sms.py  storage.py
backend_python/app/models/: __init__.py  activity.py  admin.py  audio.py  blocking.py  chat.py  cliente.py  geo.py  guardiao.py  media.py  minor.py  noticia.py  onboarding.py  ponto_apoio.py  private_chat.py  quiz.py  rss.py  sms.py  tags.py  tweet.py  twitter_bot.py
backend_python/app/schemas/: chat.py  cliente.py  guardiao.py  noticia.py  onboarding.py  (+3 more)
backend_python/scripts/: data_migration.py
backend_python/tests/: README.md  conftest.py  test_auth.py  test_e2e.py  test_integration.py
(+60 files in other folders)
