[tool.poetry]
name = "penhas-backend-python"
version = "0.1.0"
description = "Penhas Backend Python Migration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
geoalchemy2 = "^0.14.3"
boto3 = "^1.34.0"
psycopg2-binary = "^2.9.9"
dnspython = "^2.4.2"
email-validator = "^2.1.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
